[DATALAD] modified subdataset properties

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,4 @@
 	path = data/friends
 	url = /lustre03/project/6003287/datasets/cneuromod/friends
 	datalad-id = 66738676-1d20-11ea-9a9e-3ea8d101da1a
+	datalad-url = /lustre03/project/6003287/datasets/cneuromod/friends
